# cp-aal-find-subimage

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
subimage/: subimage.py
subimage/test/: test_match.py
