[metadata]
name = subimage
description = Find subimage coords in image version = 0.0.1
author = Ivan
author_email = ivanpedersen79@gmail.com
url = https://github.com/TheIvanP/cp-aal-find-subimage keywords = image, simple license_files = LICENSE

[options]
install_requires =
    numpy
    matplotlib
    scikit-image

package_dir =
    = subimage

python_requires = >= 3.7

[options.extras_require]
dev = 
    black

test =
    pytest

